# secfesc

./: .gitignore  CHANGELOG.md  README.md  ROADMAP.md  pyproject.toml
docs/: ARCHITECTURE.md  CONFIG.md  INSTALL.md  README.md  USAGE.md  _config.yml  index.md
src/secfesc/checks/filesystem/: permissions.py
src/secfesc/checks/kernel/: aslr.py  hardening.py  kernel_version.py  lockdown.py  lsm.py
src/secfesc/checks/network/: firewall.py  ipv6.py  ports.py  rp_filter.py  services.py  tcp_syncookies.py
src/secfesc/checks/system/: secureboot.py
src/secfesc/secfetch/: cli.py
src/secfesc/secfetch/data/: fixes.py  port_db.py
src/secfesc/secfetch/ui/: help.py  improve.py  output.py
src/secfesc/secscan/: __init__.py  cli.py
src/secfesc/secscan/core/: __init__.py  engine.py  registry.py
src/secfesc/secscan/report/: __init__.py  csv.py  html.py  json.py
src/secfesc/shared/: __init__.py  colors.py  config.py  error_handling.py  help.py  logger.py  registry.py  scoring.py  types.py
src/secfetch/: cli.py
src/secfetch/checks/filesystem/: permissions.py
src/secfetch/checks/network/: firewall.py  ports.py
src/secfetch/core/: config.py  engine.py  error_handling.py  scoring.py
src/secfetch/ui/: improve.py  output.py
tests/: test_checks.py  test_cli.py  test_config.py  test_engine.py  test_error_handling.py  test_filesystem_checks.py  test_help.py  test_improve.py  test_key_consistency.py  test_logger.py  test_network_checks.py  test_output.py  test_port_db.py  test_scoring.py  test_secscan.py  test_secscan_categories.py  test_secscan_report.py
(+9 files in other folders)
