[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "secfesc"
version = "1.7.0"
description = "Linux security inspection and audit tools (secfetch + secscan)"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "GPL-3.0" }

authors = [
  { name = "ake13-art" }
]

keywords = ["linux", "security", "hardening", "audit", "secfetch", "secscan"]

classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: POSIX :: Linux",
  "Environment :: Console"
]

[project.scripts]
secfetch = "secfesc.secfetch.cli:main"
secscan = "secfesc.secscan.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "ruff>=0.3.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

